--- a/css/styles.css
+++ b/css/styles.css
@@ -325,10 +325,16 @@ button {
   font-weight: bold;
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  outline: none;
 }
 
 button:hover {
-  box-shadow: 0 2px 3px rgba(0,0,0,.4);
+}
+
+button:active {
+  transform: scale(.95);
+  box-shadow: 0 1px 2px rgba(0,0,0,.5);
+  outline: none;
 }
 
 button.primary {
